--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -237,15 +237,16 @@
   </section>
   <section class="truck"></section>
   <section class="proof">
+    <div class="proof__title"></div>
     <div class="container">
-      <div class="proof__flex">
+      <!-- <div class="proof__flex">
         <div class="proof__left">
           <p>WHAT IS<br>PROOF OF WORK?</p>
         </div>
         <div class="proof__right">
           <p>it costs processing<br>power which can be<br>translated to:</p>
         </div>
-      </div>
+      </div> -->
       <div class="proof__flex">
         <div class="proof__box  proof__box--energy">
           Energy
@@ -257,23 +258,24 @@
           Time
         </div>
       </div>
-      <p class="proof__resume">It is easy ,on the other hand, for others to check if the requirements were met</p>
+      <p class="proof__resume">It is easy on the other hand for others to check if the requirements were met</p>
     </div>
   </section>
   <section class="rewards">
-    <p>IN PRACTISE:</p>
+    <p>IN PRACTICE:</p>
     <img src="img/rewards-img.png" alt="">
   </section>
   <section class="diff">
+    <div class="diff__title"></div>
     <div class="container">
-      <div class="diff__flex">
+      <!-- <div class="diff__flex">
         <div class="diff__left">
           <p>What is<br>mining difficulty?</p>
         </div>
         <div class="diff__right">
           <p>it’s a measure of how difficult is<br>to find a hash below the target<br>value (a 256-bit number) during<br>the proof of work</p>
         </div>
-      </div>
+      </div> -->
       <div class="diff__flex ">
         <div class="diff__up"></div>
         <div class="diff__down"></div>
