--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="nav  nav--closed  nav--nojs">
         <button class="nav__toggle" type="button">Открыть меню</button>
-        <div class="container">
+        <div class="nav__container">
           <div class="nav__flex">
             <div class="nav__left">
               <a class="nav__item" href="#">Start</a>
@@ -118,7 +118,7 @@
       <div class="hardware__list">
         <div class="hardware__item">
           <p class="hardware__title">AntMiner S7</p>
-          <img src="img/hardware-f.png" alt="AntMiner S7">
+          <img src="img/hardware-s.png" alt="AntMiner S7">
           <p class="hardware__charter">ADVERTISED CAPACITY</p>
           <p class="hardware__value">4.73 Th/s</p>
           <p class="hardware__charter">POWER AFFICIENCY</p>
