--- a/assets/templates/miner/sass/blocks/page-header.scss
+++ b/assets/templates/miner/sass/blocks/page-header.scss
@@ -1,6 +1,6 @@
 .page-header {
   background: #0f0e12 url('../img/header-bg.png') no-repeat;
-  background-size: cover;
+  // background-size: cover;
   
   & h1 {
     margin-top: 100px;
@@ -107,7 +107,7 @@
 .page-header__offer {
   display: flex;
   justify-content: space-between;
-  margin-top: 90px;
+  margin-top: 60px;
 }
 
 .page-header__item {
@@ -135,11 +135,18 @@
   display: flex;
   justify-content: space-between;
   margin-top: 150px;
-  padding-bottom: 50px;
+  padding-bottom: 55px;
   
   & b {
     font-size: 25px;
     text-transform: uppercase;
+  }
+}
+
+.page-header__left {
+  
+  & p {
+    margin-bottom: 0;
   }
 }
 
@@ -151,6 +158,7 @@
   }
   
   & ul {
+    margin-bottom: 0;
     padding-left: 20px;
   }
 }
