--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -76,15 +76,15 @@
       </div>
       <div class="page-header__offer">
         <div class="page-header__item">
-          <b>NEW TO MINING?</b>
+          <b>New to mining?</b>
           <a href="#">GET STARTED ›</a>
         </div>
         <div class="page-header__item">
-          <b>MINING TECHNOLOGY</b>
+          <b>Mining technology</b>
           <a href="#">LEARN MORE ›</a>
         </div>
         <div class="page-header__item">
-          <b>CLOUD MINING</b>
+          <b>Cloud mining</b>
           <a href="#">LEARN MORE ›</a>
         </div>
       </div>
