--- a/assets/templates/miner/sass/blocks/nav.scss
+++ b/assets/templates/miner/sass/blocks/nav.scss
@@ -229,7 +229,13 @@
   }
   
   @keyframes menu-opened {
-    0% { transform: translateX(100%); }
-    100% { transform: translateX(0%); }
+    0% { 
+      // transform: translateX(100%);
+      opacity: 0;
+    }
+    100% { 
+      // transform: translateX(0%); 
+      opacity: 1;
+    }
   }
 }
