--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -140,7 +140,8 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin-top: 60px; }
+  margin-top: 60px;
+  padding-bottom: 100px; }
 
 .page-header__item {
   display: -webkit-box;
@@ -161,30 +162,6 @@ body {
     color: #ffe592;
     font-size: 20px;
     text-decoration: none; }
-
-.page-header__about {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  margin-top: 150px;
-  padding-bottom: 55px; }
-  .page-header__about b {
-    font-size: 25px;
-    text-transform: uppercase; }
-
-.page-header__left p {
-  margin-bottom: 0; }
-
-.page-header__right a {
-  color: #4183c4;
-  text-decoration: none; }
-
-.page-header__right ul {
-  margin-bottom: 0;
-  padding-left: 20px; }
 
 @media screen and (max-width: 1200px) {
   .page-header {
@@ -226,6 +203,7 @@ body {
     flex-direction: column; }
   .page-header__item {
     text-align: center;
+    margin-bottom: 20px;
     padding-top: 100px;
     padding-left: 0;
     -ms-flex-item-align: center;
@@ -235,10 +213,21 @@ body {
       color: #fff;
       font-size: 25px; }
     .page-header__item a {
-      color: #4183c4;
+      color: #ffe592;
       font-size: 20px;
       font-weight: bold;
-      text-decoration: none; } }
+      text-decoration: none; }
+  .page-header__about {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin-top: 300px;
+    text-align: center; }
+  .page-header__right {
+    margin-top: 20px; }
+    .page-header__right ul {
+      text-align: left; } }
 
 .nav {
   padding-top: 50px; }
@@ -412,6 +401,35 @@ body {
       opacity: 0; }
     100% {
       opacity: 1; } } }
+
+.header-sub {
+  height: 365px;
+  margin-top: -33px;
+  background: url("../img/header-about.png") no-repeat bottom; }
+
+.header-sub__about {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding-top: 90px;
+  padding-bottom: 55px; }
+  .header-sub__about b {
+    font-size: 25px;
+    text-transform: uppercase; }
+
+.header-sub__left p {
+  margin-bottom: 0; }
+
+.header-sub__right a {
+  color: #4183c4;
+  text-decoration: none; }
+
+.header-sub__right ul {
+  margin-bottom: 0;
+  padding-left: 20px; }
 
 .hardware h2 {
   margin-top: 70px;
