--- a/assets/templates/miner/sass/style.scss
+++ b/assets/templates/miner/sass/style.scss
@@ -5,6 +5,7 @@
 
 @import 'blocks/page-header';
 @import 'blocks/nav';
+@import 'blocks/header-sub';
 @import 'blocks/hardware';
 @import 'blocks/tabs';
 @import 'blocks/mining';
