--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -165,14 +165,7 @@ body {
 
 @media screen and (max-width: 1200px) {
   .page-header {
-    background: #0f0e12 url("../img/header-bg.png") no-repeat top;
-    background-size: cover; }
-  .page-header__about {
-    margin-top: 160px; }
-  .page-header__item b {
-    padding-bottom: 10px; }
-  .page-header__item a {
-    font-size: 18px; } }
+    background: #0f0e12 url("../img/header-bg.png") no-repeat top; } }
 
 @media screen and (max-width: 768px) {
   .page-header {
@@ -286,6 +279,47 @@ body {
     .nav__language a:hover {
       color: #ffcc31;
       background: none; }
+
+@media screen and (max-width: 1200px) {
+  .nav__left a {
+    margin-right: 10px;
+    font-size: 16px;
+    font-weight: 100;
+    text-decoration: none;
+    text-transform: uppercase;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .nav__left a:hover {
+      color: #ffcc31;
+      border-bottom: 1px solid #ffcc31; }
+  .nav__right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    color: #fff;
+    font-size: 14px; }
+    .nav__right a {
+      margin-right: 10px;
+      padding: 2px 15px;
+      color: #fff;
+      border: 1px solid #fff;
+      text-decoration: none;
+      text-transform: uppercase;
+      -webkit-transition: 0.3s;
+      transition: 0.3s; }
+      .nav__right a:hover {
+        color: #000;
+        background: #fff; }
+  .nav__language {
+    margin-top: 4px;
+    margin-right: 15px; }
+    .nav__language a {
+      margin: 0;
+      padding: 0;
+      border: none; }
+      .nav__language a:hover {
+        color: #ffcc31;
+        background: none; } }
 
 @media screen and (max-width: 768px) {
   .nav__flex {
@@ -414,8 +448,7 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  padding-top: 90px;
-  padding-bottom: 55px; }
+  padding-top: 90px; }
   .header-sub__about b {
     font-size: 25px;
     text-transform: uppercase; }
@@ -430,6 +463,15 @@ body {
 .header-sub__right ul {
   margin-bottom: 0;
   padding-left: 20px; }
+
+@media screen and (max-width: 1200px) {
+  .header-sub__about {
+    padding-top: 60px; }
+    .header-sub__about b {
+      font-size: 18px; }
+  .header-sub__left p {
+    margin-bottom: 0;
+    font-size: 16px; } }
 
 .hardware h2 {
   margin-top: 70px;
