--- a/assets/templates/miner/sass/blocks/header-sub.scss
+++ b/assets/templates/miner/sass/blocks/header-sub.scss
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   padding-top: 90px;
-  padding-bottom: 55px;
+  // padding-bottom: 55px;
   
   & b {
     font-size: 25px;
@@ -34,4 +34,26 @@
     margin-bottom: 0;
     padding-left: 20px;
   }
+}
+
+@media screen and ($tablet-widths) {
+  .header-sub__about {
+    padding-top: 60px;
+    
+    & b {
+      font-size: 18px;
+    }
+  }
+  
+  .header-sub__left {
+    
+    & p {
+      margin-bottom: 0;
+      font-size: 16px;
+    }
+  }
+}
+
+@media screen and ($mobile-widths) {
+  
 }
