--- a/assets/templates/miner/sass/blocks/nav.scss
+++ b/assets/templates/miner/sass/blocks/nav.scss
@@ -68,7 +68,59 @@
 }
 
 @media screen and ($tablet-widths) {
+  .nav__left {
+    
+    & a {
+      margin-right: 10px;
+      font-size: 16px;
+      font-weight: 100;
+      text-decoration: none;
+      text-transform: uppercase;
+      transition: 0.3s;
+      
+      &:hover {
+        color: #ffcc31;
+        border-bottom: 1px solid #ffcc31;
+      }
+    }
+  }
   
+  .nav__right {
+    display: flex;
+    color: #fff;
+    font-size: 14px;
+    
+    & a {
+      margin-right: 10px;
+      padding: 2px 15px;
+      color: #fff;
+      border: 1px solid #fff;
+      text-decoration: none;
+      text-transform: uppercase;
+      transition: 0.3s;
+      
+      &:hover {
+        color: #000;
+        background: #fff;
+      }
+    }
+  }
+  
+  .nav__language {
+    margin-top: 4px;
+    margin-right: 15px;
+    
+    & a {
+      margin: 0;
+      padding: 0;
+      border: none;
+      
+      &:hover {
+        color: #ffcc31;
+        background: none;
+      }
+    }
+  }
 }
 
 @media screen and ($mobile-widths) {
