--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -75,15 +75,15 @@
         </div>
       </div>
       <div class="page-header__offer">
-        <div class="page-header__item">
+        <div class="page-header__item  page-header__item--new">
           <b>New to mining?</b>
           <a href="#">GET STARTED ›</a>
         </div>
-        <div class="page-header__item">
+        <div class="page-header__item  page-header__item--tech">
           <b>Mining technology</b>
           <a href="#">LEARN MORE ›</a>
         </div>
-        <div class="page-header__item">
+        <div class="page-header__item  page-header__item--cloud">
           <b>Cloud mining</b>
           <a href="#">LEARN MORE ›</a>
         </div>
