--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -153,19 +153,50 @@ body {
   flex-direction: column;
   height: 76px;
   padding-top: 10px;
-  padding-left: 100px;
-  background: url("../img/header-offer.png") no-repeat left; }
+  padding-left: 90px; }
   .page-header__item b {
     color: #fff;
-    font-size: 25px; }
+    font-size: 25px;
+    font-weight: 100; }
   .page-header__item a {
     color: #ffe592;
     font-size: 20px;
-    text-decoration: none; }
+    text-decoration: none;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .page-header__item a:hover {
+      color: #4183c4; }
+
+.page-header__item--new {
+  background: url("../img/header-offer-f.png") no-repeat left; }
+
+.page-header__item--tech {
+  background: url("../img/header-offer-s.png") no-repeat left; }
+
+.page-header__item--cloud {
+  background: url("../img/header-offer-t.png") no-repeat left; }
 
 @media screen and (max-width: 1200px) {
   .page-header {
-    background: #0f0e12 url("../img/header-bg.png") no-repeat top; } }
+    background: #0f0e12 url("../img/header-bg.png") no-repeat top; }
+  .page-header__offer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    margin-top: 60px;
+    padding-bottom: 100px; }
+  .page-header__item {
+    height: 76px;
+    padding-top: 10px;
+    padding-left: 85px; }
+    .page-header__item b {
+      padding-bottom: 10px;
+      font-size: 18px; }
+    .page-header__item a {
+      font-size: 16px; } }
 
 @media screen and (max-width: 768px) {
   .page-header {
