--- a/assets/templates/miner/sass/blocks/page-header.scss
+++ b/assets/templates/miner/sass/blocks/page-header.scss
@@ -116,25 +116,64 @@
   flex-direction: column;
   height: 76px;
   padding-top: 10px;
-  padding-left: 100px;
-  background: url('../img/header-offer.png') no-repeat left;
+  padding-left: 90px;
   
   & b {
     color: #fff;
     font-size: 25px;
+    font-weight: 100;
   }
   
   & a {
     color: #ffe592;
     font-size: 20px;
     text-decoration: none;
+    transition: 0.3s;
+    
+    &:hover {
+      color: #4183c4;
+    }
   }
+}
+
+.page-header__item--new {
+  background: url('../img/header-offer-f.png') no-repeat left;
+}
+
+.page-header__item--tech {
+  background: url('../img/header-offer-s.png') no-repeat left;
+}
+
+.page-header__item--cloud {
+  background: url('../img/header-offer-t.png') no-repeat left;
 }
 
 @media screen and ($tablet-widths) {  
   .page-header {
     background: #0f0e12 url('../img/header-bg.png') no-repeat top;
     // background-size: cover;
+  }
+  
+  .page-header__offer {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 60px;
+    padding-bottom: 100px;
+  }
+  
+  .page-header__item {
+    height: 76px;
+    padding-top: 10px;
+    padding-left: 85px;
+    
+    & b {
+      padding-bottom: 10px;
+      font-size: 18px;
+    }
+    
+    & a {
+      font-size: 16px;
+    }
   }
 }
 
