--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -156,8 +156,7 @@ body {
   padding-left: 90px; }
   .page-header__item b {
     color: #fff;
-    font-size: 25px;
-    font-weight: 100; }
+    font-size: 25px; }
   .page-header__item a {
     color: #ffe592;
     font-size: 20px;
@@ -180,27 +179,19 @@ body {
   .page-header {
     background: #0f0e12 url("../img/header-bg.png") no-repeat top; }
   .page-header__offer {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    margin-top: 60px;
-    padding-bottom: 100px; }
+    -ms-flex-pack: distribute;
+    justify-content: space-around; }
   .page-header__item {
-    height: 76px;
-    padding-top: 10px;
-    padding-left: 85px; }
+    height: 76px; }
     .page-header__item b {
       padding-bottom: 10px;
-      font-size: 18px; }
+      font-size: 23px; }
     .page-header__item a {
-      font-size: 16px; } }
+      font-size: 17px; } }
 
 @media screen and (max-width: 768px) {
   .page-header {
-    min-height: 1000px; }
+    background: #0f0e12 url("../img/header-bg.png") no-repeat top; }
     .page-header h1 {
       margin-top: 0;
       font-size: 25px; }
@@ -228,11 +219,10 @@ body {
   .page-header__item {
     text-align: center;
     margin-bottom: 20px;
-    padding-top: 100px;
+    padding-top: 80px;
     padding-left: 0;
     -ms-flex-item-align: center;
-    align-self: center;
-    background: url("../img/header-offer.png") no-repeat top; }
+    align-self: center; }
     .page-header__item b {
       color: #fff;
       font-size: 25px; }
@@ -241,6 +231,12 @@ body {
       font-size: 20px;
       font-weight: bold;
       text-decoration: none; }
+  .page-header__item--new {
+    background: url("../img/header-offer-f.png") no-repeat top; }
+  .page-header__item--tech {
+    background: url("../img/header-offer-s.png") no-repeat top; }
+  .page-header__item--cloud {
+    background: url("../img/header-offer-t.png") no-repeat top; }
   .page-header__about {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
