--- a/assets/templates/miner/sass/blocks/page-header.scss
+++ b/assets/templates/miner/sass/blocks/page-header.scss
@@ -120,8 +120,7 @@
   
   & b {
     color: #fff;
-    font-size: 25px;
-    font-weight: 100;
+    font-size: 25px;  
   }
   
   & a {
@@ -155,31 +154,29 @@
   }
   
   .page-header__offer {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 60px;
-    padding-bottom: 100px;
+    justify-content: space-around;
   }
   
   .page-header__item {
     height: 76px;
-    padding-top: 10px;
-    padding-left: 85px;
+    // padding-top: 10px;
+    // padding-left: 85px;
     
     & b {
       padding-bottom: 10px;
-      font-size: 18px;
+      font-size: 23px;
     }
     
     & a {
-      font-size: 16px;
+      font-size: 17px;
     }
   }
 }
 
 @media screen and ($mobile-widths) {
   .page-header {
-    min-height: 1000px;
+    background: #0f0e12 url('../img/header-bg.png') no-repeat top;
+    // background-size: cover;
     
     & h1 {
       margin-top: 0;
@@ -218,10 +215,9 @@
     text-align: center;
     // height: auto;
     margin-bottom: 20px;
-    padding-top: 100px;
+    padding-top: 80px;
     padding-left: 0;
     align-self: center;
-    background: url('../img/header-offer.png') no-repeat top;
     
     & b {
       color: #fff;
@@ -234,6 +230,18 @@
       font-weight: bold;
       text-decoration: none;
     }
+  }
+  
+  .page-header__item--new {
+    background: url('../img/header-offer-f.png') no-repeat top;
+  }
+  
+  .page-header__item--tech {
+    background: url('../img/header-offer-s.png') no-repeat top;
+  }
+  
+  .page-header__item--cloud {
+    background: url('../img/header-offer-t.png') no-repeat top;
   }
   
   .page-header__about {
