--- a/assets/templates/miner/sass/blocks/page-header.scss
+++ b/assets/templates/miner/sass/blocks/page-header.scss
@@ -175,6 +175,7 @@
 
 @media screen and ($mobile-widths) {
   .page-header {
+    height: 1183px;
     background: #0f0e12 url('../img/header-bg.png') no-repeat top;
     // background-size: cover;
     
