--- a/assets/templates/miner/sass/blocks/header-sub.scss
+++ b/assets/templates/miner/sass/blocks/header-sub.scss
@@ -55,5 +55,24 @@
 }
 
 @media screen and ($mobile-widths) {
-
+  .header-sub {
+    height: 690px;
+    margin-top: -5px;
+    background: url('../img/header-about-m.png') no-repeat bottom;
+  }
+  
+  .header-sub__about {
+    flex-direction: column;
+    padding-top: 30px;
+    
+    text-align: center;
+  }
+  
+  .header-sub__right {
+    margin-top: 20px;
+    
+    & ul {
+      text-align: left;
+    }
+  }
 }
