--- a/assets/templates/miner/sass/blocks/proof.scss
+++ b/assets/templates/miner/sass/blocks/proof.scss
@@ -73,6 +73,12 @@
 }
 
 @media screen and ($mobile-widths) {
+  .proof__title {
+    height: 380px;
+    background: url('../img/proof-title-m.png') no-repeat top;
+    // background-size: cover;
+  }
+  
   .proof__flex {
     display: flex;
     flex-direction: column;
