--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -243,14 +243,14 @@
   <section class="proof">
     <div class="proof__title"></div>
     <div class="container">
-      <!-- <div class="proof__flex">
+      <div class="proof__flex  proof__flex--mobile">
         <div class="proof__left">
           <p>WHAT IS<br>PROOF OF WORK?</p>
         </div>
         <div class="proof__right">
           <p>it costs processing<br>power which can be<br>translated to:</p>
         </div>
-      </div> -->
+      </div>
       <div class="proof__flex">
         <div class="proof__box  proof__box--energy">
           Energy
@@ -272,14 +272,14 @@
   <section class="diff">
     <div class="diff__title"></div>
     <div class="container">
-      <!-- <div class="diff__flex">
+      <div class="diff__flex  diff__flex--mobile">
         <div class="diff__left">
           <p>What is<br>mining difficulty?</p>
         </div>
         <div class="diff__right">
           <p>it’s a measure of how difficult is<br>to find a hash below the target<br>value (a 256-bit number) during<br>the proof of work</p>
         </div>
-      </div> -->
+      </div>
       <div class="diff__flex ">
         <div class="diff__up"></div>
         <div class="diff__down"></div>
