--- a/assets/templates/miner/sass/blocks/rewards.scss
+++ b/assets/templates/miner/sass/blocks/rewards.scss
@@ -1,10 +1,10 @@
 .rewards {
-  min-height: 1150px;
-  background: url('../img/rewards-bg.png') no-repeat;
+  min-height: 1350px;
+  background: url('../img/rewards-bg.png') no-repeat top;
   background-size: cover;
   
   & p {
-    padding-top: 70px;
+    padding-top: 170px;
     font-size: 40px;
     font-weight: bold;
     text-align: center;
