--- a/assets/templates/miner/sass/blocks/diff.scss
+++ b/assets/templates/miner/sass/blocks/diff.scss
@@ -12,25 +12,27 @@
   background-size: contain;
 }
 
-// .diff__left {
-//   padding: 40px;
-//   color: #fff;
-//   font-size: 40px;
-//   font-weight: bold;
-//   background: #000;
-// 
-//   & p {
-//     margin: 0;
-//   }
-// }
-// 
-// .diff__right {
-//   padding-top: 20px;
-//   color: #262626;
-//   font-size: 20px;
-//   font-weight: bold;
-//   text-transform: uppercase;
-// }
+.diff__left {
+  width: 100%;
+  color: #fff;
+  font-size: 30px;
+  font-weight: bold;
+  background: #000;
+
+  & p {
+    margin: 0;
+    padding: 30px;
+    text-align: center;
+  }
+}
+
+.diff__right {
+  padding-top: 20px;
+  color: #262626;
+  font-size: 20px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
 
 .diff__up {
   width: 350px;
@@ -44,6 +46,10 @@
   background: url('../img/diff-right.png') no-repeat;
 }
 
+.diff__flex--mobile {
+  display: none;
+}
+
 @media screen and ($tablet-widths) {
   .diff__title {
     height: 150px;
@@ -53,6 +59,13 @@
 }
 
 @media screen and ($mobile-widths) {
+  .diff__title {
+    height: 300px;
+    margin-top: 20px;
+    background: url('../img/diff-title-m.png') no-repeat top;
+    background-size: contain;
+  }
+  
   .diff__flex {
     display: flex;
     flex-direction: column;
@@ -65,13 +78,12 @@
     text-align: center;
   }
   
-  .diff__up,
-  .diff__down {
-    display: none;
-  }
-  
   .diff__up {
+    margin-top: 40px;
     margin-bottom: 40px;
   }
   
+  .diff__title {
+    display: none;
+  }
 }
