--- a/assets/templates/miner/sass/blocks/proof.scss
+++ b/assets/templates/miner/sass/blocks/proof.scss
@@ -64,6 +64,10 @@
   text-align: center;
 }
 
+.proof__flex--mobile {
+  display: none;
+}
+
 @media screen and ($tablet-widths) {
   .proof__title {
     height: 170px;
@@ -76,7 +80,7 @@
   .proof__title {
     height: 380px;
     background: url('../img/proof-title-m.png') no-repeat top;
-    // background-size: cover;
+    background-size: contain;
   }
   
   .proof__flex {
@@ -90,11 +94,28 @@
     margin-bottom: 50px;
   }
   
+  .proof__left {
+    width: 100%;
+    color: #fff;
+    font-size: 30px;
+    font-weight: bold;
+    background: #000;
+    
+    & p {
+      margin: 0;
+      padding: 30px;
+      text-align: center;
+    }
+  }
+  
   .proof__right {
-    padding-left: 0;
-    font-size: 16px;
+    margin-top: 30px;
+    padding-top: 150px;
+    font-size: 20px;
+    font-weight: bold;
     text-align: center;
-    background: none;
+    text-transform: uppercase;
+    background: url('../img/proof-power.png') no-repeat top;
   }
   
   .proof__resume {
@@ -102,5 +123,9 @@
     margin-bottom: 0;
     padding-bottom: 50px;
     font-size: 16px;
+  }
+  
+  .proof__title {
+    display: none;
   }
 }
