--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="page-header__title">
-        <h1>CRYPTOMINER.COM</h1>
+        <h1>MININGCRYPTO.COM</h1>
         <b>WE MINE SINCE 1812</b>
         <div class="page-header__social">
           <a class="page-header__link  page-header__link--phone" href="#"></a>
