--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -817,6 +817,7 @@ body {
   background: url("../img/rewards-bg.png") no-repeat top;
   background-size: cover; }
   .rewards p {
+    margin-top: 0;
     padding-top: 170px;
     font-size: 40px;
     font-weight: bold;
