--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -272,7 +272,7 @@ form a {
 /* iPads (вертикальная и горизонтальная) ----------- */
 .page-header {
   min-height: 730px;
-  background: #070055 url("../img/header.jpg") top;
+  background: #070055 url("../img/header.png") top;
   background-size: cover; }
 
 .page-header__logo {
