--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -35,7 +35,7 @@
       </div>
       <div class="page-header__title">
         <h1>MININGCRYPTO.COM</h1>
-        <b>WE MINE CRYPTOCURRENCY SINCE 2013</b>
+        <b>We mine cryptocurrency since 2013</b>
         <div class="page-header__social">
           <a class="page-header__link  page-header__link--phone" href="#"></a>
           <a class="page-header__link  page-header__link--linkedin" href="#"></a>
