--- a/assets/templates/miner/sass/blocks/cloud.scss
+++ b/assets/templates/miner/sass/blocks/cloud.scss
@@ -1,8 +1,8 @@
 .cloud {
-  min-height: 850px;
+  min-height: 830px;
   margin-top: -110px;
   background: url('../img/cloud-bg.png');
-  background-size: cover;
+  // background-size: cover;
 }
 
 .cloud__flex {
