--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -34,7 +34,8 @@
         </div>
       </div>
       <div class="page-header__title">
-        <h1>MININGCRYPTO.COM</h1>
+        <h1>MAININGCRYPTO.COM</h1>
+        <b>The main sourse for mining</b><br>
         <b>We mine cryptocurrency since 2013</b>
         <div class="page-header__social">
           <a class="page-header__link  page-header__link--phone" href="#"></a>
@@ -44,7 +45,7 @@
           <a class="page-header__link  page-header__link--skype" href="#"></a>
         </div>
       </div>
-      <div class="page-header__timer">
+      <!-- <div class="page-header__timer">
         <b>Pre-Sale Starts In</b>
         <div class="page-header__time">
           <div class="page-header__number  page-header__number--ml">
@@ -73,7 +74,7 @@
             <p>56</p>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="page-header__offer">
         <div class="page-header__item  page-header__item--new">
           <b>New to mining?</b>
