--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -140,7 +140,7 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin-top: 60px;
+  margin-top: 257px;
   padding-bottom: 100px; }
 
 .page-header__item {
@@ -636,7 +636,8 @@ body {
     flex-direction: column;
     -webkit-box-align: center;
     -ms-flex-align: center;
-    align-items: center; } }
+    align-items: center;
+    text-align: justify; } }
 
 .mining {
   min-height: 600px;
@@ -969,7 +970,8 @@ body {
     -ms-flex-pack: center;
     justify-content: center;
     margin-top: 140px;
-    padding-top: 130px; }
+    padding-top: 130px;
+    text-align: justify; }
   .cloud__title {
     padding: 30px;
     font-size: 30px;
