--- a/assets/templates/miner/sass/blocks/cloud.scss
+++ b/assets/templates/miner/sass/blocks/cloud.scss
@@ -48,6 +48,7 @@
     justify-content: center;
     margin-top: 140px;
     padding-top: 130px;
+    text-align: justify;
   }
   
   .cloud__title {
