--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -232,10 +232,10 @@
     <div class="container">
       <div class="mining-sub__flex">
         <div class="mining-sub__left">
-          <p>confirms transactions in a trustfull<br>manner when enough computational<br>power (effort) is devoted to block</p>
+          <p>1. Confirms transactions in a trustfull<br>manner when enough computational<br>power (effort) is devoted to block</p>
         </div>
         <div class="mining-sub__right">
-          <p>creates (issues)<br>new bitcoin<br>in each block</p>
+          <p>2. Creates (issues)<br>new bitcoin<br>in each block</p>
         </div>
       </div>
     </div>
