--- a/assets/templates/miner/sass/blocks/mining.scss
+++ b/assets/templates/miner/sass/blocks/mining.scss
@@ -15,5 +15,6 @@
     min-height: 370px;
     margin-top: 20px;
     background: url('../img/mining-bg-m.png') no-repeat top;
+    background-size: cover;
   }
 }
