--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -55,7 +55,7 @@ body {
   background: #0f0e12 url("../img/header-bg.png") no-repeat top; }
   .page-header h1 {
     margin-top: 100px;
-    margin-bottom: 0;
+    margin-bottom: 30px;
     color: #fff;
     font-size: 60px; }
 
@@ -98,41 +98,6 @@ body {
 .page-header__link--skype {
   background: url("../img/header-sprite.png") -188px -10px; }
 
-.page-header__timer {
-  margin-top: 100px;
-  color: #fff; }
-  .page-header__timer b {
-    font-size: 20px;
-    font-weight: bold;
-    font-style: italic;
-    text-transform: uppercase; }
-
-.page-header__time {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 25px; }
-
-.page-header__number {
-  margin-right: 20px;
-  margin-left: 10px;
-  font-style: italic;
-  text-align: center; }
-  .page-header__number small {
-    font-size: 16px;
-    text-transform: uppercase; }
-  .page-header__number p {
-    margin: 0;
-    font-size: 55px;
-    font-weight: bold; }
-
-.page-header__number--ml {
-  margin-left: -10px; }
-
-.page-header__dot {
-  font-size: 25px;
-  font-style: italic; }
-
 .page-header__offer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -140,7 +105,7 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin-top: 257px;
+  margin-top: 227px;
   padding-bottom: 100px; }
 
 .page-header__item {
@@ -481,16 +446,19 @@ body {
     font-size: 25px;
     text-transform: uppercase; }
 
-.header-sub__left p {
-  margin-bottom: 0; }
+.header-sub__left {
+  width: 500px; }
+  .header-sub__left p {
+    margin-bottom: 0; }
 
-.header-sub__right a {
-  color: #4183c4;
-  text-decoration: none; }
-
-.header-sub__right ul {
-  margin-bottom: 0;
-  padding-left: 20px; }
+.header-sub__right {
+  width: 550px; }
+  .header-sub__right a {
+    color: #4183c4;
+    text-decoration: none; }
+  .header-sub__right ul {
+    margin-bottom: 0;
+    padding-left: 20px; }
 
 @media screen and (max-width: 1200px) {
   .header-sub__about {
@@ -512,6 +480,10 @@ body {
     -ms-flex-direction: column;
     flex-direction: column;
     padding-top: 30px; }
+  .header-sub__left,
+  .header-sub__right {
+    width: auto;
+    text-align: justify; }
   .header-sub__right {
     margin-top: 20px; } }
 
@@ -651,7 +623,8 @@ body {
   .mining {
     min-height: 370px;
     margin-top: 20px;
-    background: url("../img/mining-bg-m.png") no-repeat top; } }
+    background: url("../img/mining-bg-m.png") no-repeat top;
+    background-size: cover; } }
 
 .mining-sub p {
   font-size: 20px;
@@ -764,10 +737,6 @@ body {
     background-size: contain; } }
 
 @media screen and (max-width: 768px) {
-  .proof__title {
-    height: 380px;
-    background: url("../img/proof-title-m.png") no-repeat top;
-    background-size: contain; }
   .proof__flex {
     display: -webkit-box;
     display: -ms-flexbox;
