--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -96,12 +96,12 @@
       <div class="header-sub__about">
         <div class="header-sub__left">
           <b>How Bitcoin Mining Works</b>
-          <p>Where do bitcoins come from? With paper money, a government<br>decides when to print and distribute money. Bitcoin doesn't have<br>a central government.</p>
-          <p>With Bitcoin, miners use special software to solve math problems<br>and are issued a certain number of bitcoins in exchange. This<br>provides a smart way to issue the currency and also creates an<br>incentive for more people to mine.</p>
+          <p>Where do bitcoins come from? With paper money, a government decides when to print and distribute money. Bitcoin doesn't have a central government.</p>
+          <p>With Bitcoin, miners use special software to solve math problems and are issued a certain number of bitcoins in exchange. This provides a smart way to issue the currency and also creates an incentive for more people to mine.</p>
         </div>
         <div class="header-sub__right">
           <b>Bitcoin is Secure</b>
-          <p>Bitcoin miners help keep the Bitcoin network secure by approving transactions.<br>Mining is an important and integral part of Bitcoin that ensures fairness while<br>keeping the Bitcoin network stable, safe and secure.</p>
+          <p>Bitcoin miners help keep the Bitcoin network secure by approving transactions. Mining is an important and integral part of Bitcoin that ensures fairness while keeping the Bitcoin network stable, safe and secure.</p>
           <b>Links</b>
           <ul>
             <li><a href="#">We Use Coins</a> - Learn all about crypto-currency.</li>
