--- a/assets/templates/miner/sass/blocks/page-header.scss
+++ b/assets/templates/miner/sass/blocks/page-header.scss
@@ -4,7 +4,7 @@
   
   & h1 {
     margin-top: 100px;
-    margin-bottom: 0;
+    margin-bottom: 30px;
     color: #fff;
     font-size: 60px;
   }
@@ -59,55 +59,55 @@
 }
 
 // Timer
-.page-header__timer {
-  margin-top: 100px;
-  color: #fff;
-  
-  & b {
-    font-size: 20px;
-    font-weight: bold;
-    font-style: italic;
-    text-transform: uppercase;
-  }
-}
-
-.page-header__time {
-  display: flex;
-  margin-top: 25px;
-}
-
-.page-header__number {
-  margin-right: 20px;
-  margin-left: 10px;
-  font-style: italic;
-  text-align: center;
-  
-  & small {
-    font-size: 16px;
-    text-transform: uppercase;
-  }
-  
-  & p {
-    margin: 0;
-    font-size: 55px;
-    font-weight: bold;
-  }
-}
-
-.page-header__number--ml {
-  margin-left: -10px;
-}
-
-.page-header__dot {
-  font-size: 25px;
-  font-style: italic;
-}
+// .page-header__timer {
+//   margin-top: 100px;
+//   color: #fff;
+// 
+//   & b {
+//     font-size: 20px;
+//     font-weight: bold;
+//     font-style: italic;
+//     text-transform: uppercase;
+//   }
+// }
+// 
+// .page-header__time {
+//   display: flex;
+//   margin-top: 25px;
+// }
+// 
+// .page-header__number {
+//   margin-right: 20px;
+//   margin-left: 10px;
+//   font-style: italic;
+//   text-align: center;
+// 
+//   & small {
+//     font-size: 16px;
+//     text-transform: uppercase;
+//   }
+// 
+//   & p {
+//     margin: 0;
+//     font-size: 55px;
+//     font-weight: bold;
+//   }
+// }
+// 
+// .page-header__number--ml {
+//   margin-left: -10px;
+// }
+// 
+// .page-header__dot {
+//   font-size: 25px;
+//   font-style: italic;
+// }
 
 // Offer
 .page-header__offer {
   display: flex;
   justify-content: space-between;
-  margin-top: 257px;
+  margin-top: 227px;
   padding-bottom: 100px;
 }
 
