--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -249,7 +249,7 @@
           <p>WHAT IS<br>PROOF OF WORK?</p>
         </div>
         <div class="proof__right">
-          <p>it costs processing<br>power which can be<br>translated to:</p>
+          <p>It costs processing<br>power which can be<br>translated to:</p>
         </div>
       </div>
       <div class="proof__flex">
@@ -278,7 +278,7 @@
           <p>What is<br>mining difficulty?</p>
         </div>
         <div class="diff__right">
-          <p>it’s a measure of how difficult is<br>to find a hash below the target<br>value (a 256-bit number) during<br>the proof of work</p>
+          <p>It’s a measure of how difficult is<br>to find a hash below the target<br>value (a 256-bit number) during<br>the proof of work</p>
         </div>
       </div>
       <div class="diff__flex ">
