--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -767,7 +767,6 @@ body {
     font-size: 20px;
     font-weight: bold;
     text-align: center;
-    text-transform: uppercase;
     background: url("../img/proof-power.png") no-repeat top; }
   .proof__resume {
     margin-top: 0;
@@ -802,7 +801,6 @@ body {
   display: flex;
   -ms-flex-pack: distribute;
   justify-content: space-around;
-  text-transform: uppercase;
   margin-top: 100px; }
 
 .diff__title {
@@ -816,6 +814,7 @@ body {
   color: #fff;
   font-size: 30px;
   font-weight: bold;
+  text-transform: uppercase;
   background: #000; }
   .diff__left p {
     margin: 0;
@@ -826,8 +825,7 @@ body {
   padding-top: 20px;
   color: #262626;
   font-size: 20px;
-  font-weight: bold;
-  text-transform: uppercase; }
+  font-weight: bold; }
 
 .diff__up {
   width: 350px;
