--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -297,10 +297,10 @@
           <p>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain. This ledger of past transactions is called the block chain as it is a chain of blocks. The block chain serves to confirm transactions to the rest of the network as having taken place.</p>
           <p>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain. This ledger of past transactions is called the block chain as it is a chain of blocks. The block chain serves to confirm transactions to the rest of the network as having taken place. Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain. This ledger of past transactions is called the block chain as it is a chain of blocks. The block chain serves to confirm transactions to the rest of the network as having taken place.</p>
         </div>
-        <div class="cloud__middle">
+        <!-- <div class="cloud__middle">
           <p class="cloud__title">What is<br>Bitcoin<br>CLOUDMining?</p>
           <p>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain. Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain. Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain.  </p>
-        </div>
+        </div> -->
         <!-- <div class="cloud__right">
           <img src="img/cloud-human.png" alt="" width="600">
         </div> -->
