--- a/assets/templates/miner/sass/blocks/cloud.scss
+++ b/assets/templates/miner/sass/blocks/cloud.scss
@@ -1,19 +1,20 @@
 .cloud {
   min-height: 830px;
   margin-top: -110px;
-  background: url('../img/cloud-bg.png');
+  background: url('../img/cloud-bg-t.png');
   // background-size: cover;
 }
 
 .cloud__flex {
-  display: flex;
+  // display: flex;
   justify-content: space-around;
   padding-top: 150px;
   padding-bottom: 100px;
 }
 
 .cloud__left {
-  width: 500px;
+  width: 450px;
+  margin-top: 150px;
   // margin-right: 50px;
   font-size: 18px;
   color: rgba(0, 0, 0, 0.8);
